test/spec_vectors/i32/fail/module_53.wat
(module (memory 1) (func $type-binary-1st-operand-empty-in-store (i32.store (i32.add) (i32.const 1))))